[package]
name = "piroh"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
iroh = "0.32.1"
tokio = "1.43.0"
ed25519-dalek = { version = "2.0.0", features = ["serde", "rand_core"] }
rand = { version = "0.8.5", features = ["std_rng"] }
rand_core = "0.6.4"
iroh-gossip = "0.32.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
data-encoding = "2.8.0"
futures-lite = "2.6.0"
clap = { version = "4.5.28", features = ["derive"] }
